# pazpaz

./: .env.example  .env.prod.example  .env.production.example  .gitignore  .mcp.json.example  CHANGELOG.md  CI_CD_OPTIMIZATION_SUMMARY.md  CI_CD_TEST_PLAN.md  CLAUDE.md  CODEBASE_EXPLORATION_QUICK_REFERENCE.md  CODEBASE_EXPLORATION_SUMMARY.txt  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  HEBREW_I18N_ANALYSIS.md  I18N_COMPONENT_INVENTORY.md  I18N_QUICK_REFERENCE.md  MANUAL_TEST_GUIDE.md  PAYMENT_PHASE1_IMPLEMENTATION_PLAN.md  QUICKSTART.md  README.md  SETUP_GITHUB_SECRETS.md  TEST_CI_CD.md  _Python_PazPazV1_pazpaz_client_app_forms.py1.stats  _Python_PazPazV1_pazpaz_client_app_models.py1.stats  _Python_PazPazV1_pazpaz_client_app_views.py1.stats  _Python_PazPazV1_pazpaz_pazpaz_settings.py1.stats  db.sqlite3  deploy-ai-agent-to-production.sh  deploy-with-password.exp  docker-compose.prod.yml  docker-compose.yml  fix-deployment.exp  manage.py  monitor-and-deploy.sh  package-lock.json  package.json  verify-network-isolation.sh
backend/: .deployment-test  .deployment-trigger  .dockerignore  .env.example  .gitignore  BACKEND_INTEGRATION_TASKS.md  BULK_DOWNLOAD_BACKEND_IMPLEMENTATION.md  Dockerfile  ENCRYPTION_MIGRATION_SIGN_OFF.md  FILE_RENAME_BACKEND_IMPLEMENTATION.md  README.md  alembic.ini  cleanup_local_postgres.sh  create_test_appointment.py  fix_csrf_tests.py  pyproject.toml  seed_dev_data.py  start_backend.sh  test_db_connection.py  test_db_connection_debug.py  test_db_no_password.py  verification_output.txt  verify_pdf_sanitization.py
backend/.claude/agents/: devops-infrastructure-specialist.md
backend/alembic/: env.py
backend/alembic/versions/: 0131df2d459b_add_appointment_edit_tracking.py  01a5a73e9841_add_encryption_metadata_to_attachments.py  01b9ba5f6818_add_totp_fields_to_user.py  03742492d865_add_session_amendment_tracking.py  0d6b572f1853_add_payment_link_fields.py  11a114ee018b_add_check_constraint_finalized_sessions_.py  154da4b93b1d_add_pgvector_extension_and_session_.py  16631c4e036f_add_google_calendar_consent_to_clients.py  2941a42b2723_clean_empty_payment_configurations.py  2de77d93d190_add_soft_delete_fields_to_sessions.py  3adf29e61586_add_timezone_to_workspace.py  430584776d5b_create_sessions_tables.py  5407ac8bbc2b_upgrade_embeddings_to_1536_dimensions_.py  61c48083dbeb_add_payment_tracking_fields_to_.py  6480841e9520_add_workspace_status_and_blacklist_table.py  65ac34a08850_initial_schema.py  6679fc01412c_simplify_payment_system_remove_.py  6be7adba063b_add_pgcrypto_extension.py  70cacacc22ab_replace_digest_skip_weekends_with_.py  74858d29f6e5_rename_completed_to_attended.py  7530a2393547_add_payment_infrastructure.py  75c10af3f2de_add_google_calendar_tokens_table.py  8283b279aeac_fix_pgcrypto_functions.py  83680210d7d2_add_client_healthcare_fields.py  84d3337219df_update_google_calendar_consent_to_opt_.py  9262695391b3_create_session_versions_table.py  92df859932f2_encrypt_client_date_of_birth.py  9f17cfe59bf8_enable_citext_extension_for_case_.py  a2341bb8aa45_encrypt_client_pii_fields.py  a5ac11f65d20_add_sync_tracking_fields_to_google_.py  a8b3c4d5e6f7_add_user_notification_settings.py  ad0e9ab68b84_add_google_event_id_to_appointments.py  b9c4d5e6f7a8_add_appointment_reminder_tracking.py  c289c823d8e8_make_audit_events_workspace_id_nullable_.py  c7aa15ce5841_convert_email_blacklist_email_to_citext.py  c8f45998f882_add_has_google_baa_to_google_calendar_.py  d1f764670a60_add_workspace_storage_quota_fields.py  da1a1442ee90_add_platform_admin_and_invitations.py  de72ee2cfb00_add_audit_events_table.py  ea67a34acb9c_add_client_level_attachments.py  (+4 more)
backend/certs/: README.md  root.crt
backend/config/clamav/: clamd.conf  freshclam.conf
backend/docs/: DAY3_AFTERNOON_ENCRYPTION_DESIGN_SUMMARY.md  DAY4_DATABASE_ENCRYPTION_PERFORMANCE.md  ENCRYPTED_MODELS_EXAMPLE.py  ENCRYPTION_ARCHITECTURE.md  ENCRYPTION_IMPLEMENTATION_GUIDE.md  KEY_ROTATION_PROCEDURE.md  README.md  audit_middleware_session_fix.md
backend/docs/api/: README.md
backend/docs/encryption/: DATABASE_ARCHITECTURE_REVIEW_DAY4_ENCRYPTION.md  DATABASE_ENCRYPTION_MIGRATION_TEMPLATE.md  ENCRYPTION_USAGE_GUIDE.md
backend/docs/migrations/: ENCRYPT_CLIENT_DOB_MIGRATION_GUIDE.md  ENCRYPT_CLIENT_PII_MIGRATION_GUIDE.md  ENCRYPT_CLIENT_PII_TESTING_SUMMARY.md
backend/docs/storage/: FILE_UPLOAD_SECURITY.md  STORAGE_CONFIGURATION.md  WEEK3_DAY11_STORAGE_IMPLEMENTATION_SUMMARY.md
backend/scripts/: backfill_client_embeddings.py  backup_encryption_keys.sh  create_platform_admin.py  create_storage_buckets.py  create_test_client_with_sessions.py  docker-entrypoint-db.sh  fix_hebrew_embeddings.py  generate_embeddings_for_client.py  generate_session_embeddings_manual.py  generate_ssl_certs.sh  manual_argon2_verification.py  migrate_encrypt_client_data.py  migrate_encrypt_client_dob.py  re_encrypt_old_data.py  restore_encryption_keys.sh  rotate_encryption_keys.py  test_client_encryption_performance.py  test_db_hebrew_embeddings.py  test_hebrew_embeddings.py  test_ssl_connection.py  validate_s3_credentials.py  verify_client_dob_encryption.py  verify_client_encryption.py
backend/scripts/production/: deploy-minio-ssl-fix.sh  fix-nginx-ssl.sh  generate-minio-certs.sh  generate-nginx-certs.sh  regenerate-ssl-certs-v2.sh
backend/src/pazpaz/: __init__.py  main.py
backend/tests/: README.md  __init__.py  conftest.py  test_appointment_api.py  test_audit_logging.py  test_audit_middleware_integration.py  test_auth_audit_logging.py  test_auth_endpoints.py  test_auth_verify_security.py  test_authentication.py  test_client_api.py  test_config.py  test_csrf_middleware_ordering.py  test_csrf_protection.py  test_encryption.py  test_encryption_key_rotation.py  test_encryption_performance.py  test_file_sanitization.py  test_jwt_expiration.py  test_magic_link_security_enhancements.py  test_malware_scanner.py  test_password_hashing_argon2.py  test_performance.py  test_rate_limiting.py  test_rate_limiting_failure_modes.py  test_request_size_limit.py  test_storage_encryption.py  test_storage_quota.py  test_workspace_isolation.py
(+859 files in other folders)
